--- a/assets/styles/template/style.scss
+++ b/assets/styles/template/style.scss
@@ -864,6 +864,8 @@ Message Box
     border-radius: 4px;
     margin-bottom: 20px;
     z-index: 999;
+    background: #135771;
+    color: white;
 }
 
 .message-box p {
@@ -883,8 +885,8 @@ Message Box
 .message-box .close-btn {
     position: absolute;
     z-index: 1;
-    top: 0px;
-    right: 0px;
+    top: 0;
+    right: 0;
     height: 100%;
     width: 80px;
     font-size: 24px;
@@ -3820,8 +3822,8 @@ Mobile Header
     opacity: 0;
     margin-top: -15px;
     -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    border-radius: 0px 0px 8px 8px;
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    border-radius: 0 0 8px 8px;
     border-top: 2px solid #1967D2;
     -webkit-transition:all 300ms ease;
     -o-transition:all 300ms ease;
@@ -3935,8 +3937,8 @@ Login Popup
     max-width: 500px;
     overflow: visible;
     background: none;
-    -webkit-box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
     border-radius: 8px;
 }
 
@@ -4371,15 +4373,14 @@ Section Title
     position: relative;
     background: #FFFFFF;
     border: 1px solid #ECEDF2;
-    -webkit-box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
     border-radius: 8px;
     min-width: 202px;
     height: 50px;
     line-height: 20px;
     padding: 15px 20px;
     font-size: 14px;
-    line-height: 19px;
     color: #202124;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -4483,8 +4484,8 @@ Banner Section
     position: relative;
     background: #FFFFFF;
     border: 1px solid #ECEDF2;
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
     border-radius: 10px;
     min-width: 740px;
     margin-bottom: 22px;
@@ -4538,7 +4539,7 @@ Banner Section
     line-height: 30px;
     font-weight: 400;
     background: #ffffff;
-    padding: 15px 0px;
+    padding: 15px 0;
     padding-left: 40px;
     border: 0;
     border-radius: 0;
@@ -4571,7 +4572,7 @@ border-bottom: 0 !important;*/
 
 .job-search-form .chosen-container-active .chosen-drop{
     border: 1px solid #ECEDF2 !important;
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
     border-radius: 8px !important;
     padding-top: 10px !important;
 }
@@ -4666,8 +4667,8 @@ Info Blocks
     -ms-flex-align: center;
     align-items: center;
     background: #FFFFFF;
-    -webkit-box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
-    box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
+    -webkit-box-shadow: 0 40px 30px rgba(25, 25, 46, 0.04);
+    box-shadow: 0 40px 30px rgba(25, 25, 46, 0.04);
     border-radius: 8px;
 }
 
@@ -4718,8 +4719,8 @@ Info Blocks
     flex-direction: column;
     padding: 30px 35px;
     background: #FFFFFF;
-    -webkit-box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
-    box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
+    -webkit-box-shadow: 0 40px 30px rgba(25, 25, 46, 0.04);
+    box-shadow: 0 40px 30px rgba(25, 25, 46, 0.04);
     border-radius: 8px;
     text-align: center;
 }
@@ -4741,8 +4742,8 @@ Info Blocks
 .info_block_three{
     position: relative;
     padding: 20px 80px 20px 90px;
-    -webkit-box-shadow: 0px 46px 35px rgba(25, 25, 46, 0.04);
-    box-shadow: 0px 46px 35px rgba(25, 25, 46, 0.04);
+    -webkit-box-shadow: 0 46px 35px rgba(25, 25, 46, 0.04);
+    box-shadow: 0 46px 35px rgba(25, 25, 46, 0.04);
     background: #ffffff;
     min-height: 90px;
     min-width: 290px;
@@ -4820,8 +4821,8 @@ Info Blocks
 .info_block_four .inner{
     position: relative;
     padding: 20px 30px 20px 66px;
-    -webkit-box-shadow: 0px 46px 35px rgba(25, 25, 46, 0.04);
-    box-shadow: 0px 46px 35px rgba(25, 25, 46, 0.04);
+    -webkit-box-shadow: 0 46px 35px rgba(25, 25, 46, 0.04);
+    box-shadow: 0 46px 35px rgba(25, 25, 46, 0.04);
     background: #ffffff;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -4857,8 +4858,8 @@ Info Blocks
     color: #125671;
     background: #FFFFFF;
     overflow: hidden;
-    -webkit-box-shadow: 0px 46.7708px 35.0781px rgba(25, 25, 46, 0.04);
-    box-shadow: 0px 46.7708px 35.0781px rgba(25, 25, 46, 0.04);
+    -webkit-box-shadow: 0 46.7708px 35.0781px rgba(25, 25, 46, 0.04);
+    box-shadow: 0 46.7708px 35.0781px rgba(25, 25, 46, 0.04);
     border-radius: 9.35417px;
     z-index: 1;
 }
@@ -5126,8 +5127,8 @@ Banner Section Three
     position: relative;
     background: #FFFFFF;
     border: 1px solid #ECEDF2;
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
     border-radius: 10px;
     min-width: 740px;
     margin-bottom: 18px;
@@ -5189,7 +5190,7 @@ Banner Section Three
     line-height: 20px;
     font-weight: 400;
     background: #ffffff;
-    padding: 5px 0px;
+    padding: 5px 0;
     padding-right: 40px;
     border: 0;
     border-radius: 0;
@@ -5507,7 +5508,7 @@ Banner Section Six
 }
 
 .banner-section-six:before{ 
-    border-radius: 0px 60px 60px 0px;
+    border-radius: 0 60px 60px 0;
     left: 50%;
     width: 500px;
 }
@@ -6132,8 +6133,8 @@ Work Section
 }
 
 .work-block .inner-box:hover{
-    -webkit-box-shadow: 0px 0px 30px rgba(64, 79, 104, 0.1);
-    box-shadow: 0px 0px 30px rgba(64, 79, 104, 0.1);
+    -webkit-box-shadow: 0 0 30px rgba(64, 79, 104, 0.1);
+    box-shadow: 0 0 30px rgba(64, 79, 104, 0.1);
 }
 
 .work-block .image{
@@ -6190,8 +6191,8 @@ Job Categories
 }
 
 .category-block .inner-box:hover{
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
 }
 
 .category-block .content{
@@ -6284,8 +6285,8 @@ Job Categories
 }
 
 .category-block-two .inner-box:hover{
-    -webkit-box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
 }
 
 .category-block-two .content{
@@ -6378,8 +6379,8 @@ Job Categories
 }
 
 .category-block-three .inner-box:hover{
-    -webkit-box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
 }
 
 .category-block-three .content{
@@ -6555,8 +6556,8 @@ Job Section
 }
 
 .job-block .inner-box:hover{
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
 }
 
 .job-block .content{
@@ -6741,8 +6742,8 @@ Job Section Two
 }
 
 .job-block-two .inner-box:hover{
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
 }
 
 .job-block-two .content{
@@ -6890,8 +6891,8 @@ Job Section Three
 }
 
 .job-block-three .inner-box:hover{
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
 }
 
 .job-block-three .content{
@@ -7033,8 +7034,8 @@ Job Section Four
 }
 
 .job-block-four .inner-box:hover{
-    -webkit-box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 7px 18px rgba(64, 79, 104, 0.05);
 }
 
 .job-block-four .job-other-info{
@@ -7058,14 +7059,14 @@ Job Section Four
 .job-block-four .job-other-info li{
     width: auto;
     display: inline-block;
-    border-radius: 0;
+    //border-radius: 0;
     border-radius: 0 30px 30px 0;
 }
 
 .job-block-four .job-other-info .time{
     position: absolute;
     right: 10px;
-    margin-right: 0px;
+    margin-right: 0;
     border-radius: 40px;
 }
 
@@ -7159,7 +7160,7 @@ Job Section Four
     line-height: 20px;
     color: #696969;
     padding: 5px 20px;
-    border-radius: 20px;
+    //border-radius: 20px;
     margin: 0 5px 10px;
 }
 
@@ -7205,8 +7206,8 @@ Job Section Five
 .job-section-five .outer-box{
     position: relative;
     background: #FFFFFF;
-    -webkit-box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
-    box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
+    -webkit-box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
+    box-shadow: 0 6px 15px rgba(64, 79, 104, 0.05);
     border: 1px solid #ECEDF2;
     border-radius: 8px;
     overflow: hidden;
@@ -7395,7 +7396,7 @@ Job Section Six
 
 .job-section-six{
     position: relative;
-    padding: 0px 0 50px;
+    padding: 0 0 50px;
     border-bottom: 1px solid #ECEDF2;
 }
 
