--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -15,6 +15,7 @@
             <li><a href="{{ path('email_index') }}"><i class="la la-mail-bulk"></i>Email templates</a></li>
             <li><a href="{{ path('faq_index') }}"><i class="la la-question"></i>FAQ</a></li>
             <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
+            <li><a href="{{ path('newsletter_list') }}"><i class="la la-newspaper"></i>Newsletters</a></li>
             <li><a href="{{ path('annonce_index') }}"><i class="la la-briefcase"></i>Offres d'emploi </a></li>
             <li><a href="{{ path('pavillon_index') }}"><i class="la la-group"></i>Pavillons</a></li>
             <li><a href="{{ path('question_index') }}"><i class="la la-question-circle-o"></i>Questions</a></li>
