--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -8,7 +8,8 @@
         'forums_all',
         'forum_page',
         'blog_conseils',
-        'blog_webtv'
+        'blog_webtv',
+        'newsletter'
     ]
 %}
 <!-- Header Span -->
