--- a/templates/newsletter/prepare.html.twig
+++ b/templates/newsletter/prepare.html.twig
@@ -3,10 +3,26 @@
 {% block title %}Création de Newsletter{% endblock %}
 
 {% block body %}
-    <h1>Ecrivez votre newsletter</h1>
-    {{form_start(form)}}
-    {{form_row(form.name)}}
-    {{form_row(form.content)}}
-    {{form_row(form.categorie)}}
-    {{form_end(form)}}
+    <section class="user-dashboard">
+        <div class="dashboard-outer">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ls-widget">
+                        <div class="tabs-box">
+                            <div class="widget-title">
+                                <h4>Newsletter</h4>
+                                <li><a href="{{ path('newsletter_list') }}" data-text="Revenir en arrière"><span class="la la-fast-backward"></span></a></li>
+                            </div>
+
+                            <div class="widget-content">
+                                <div class="table-outer">
+                                    {{ include('newsletter/_form.html.twig', {'button_label': 'Update'}) }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
