--- a/templates/layouts/newsletter.html.twig
+++ b/templates/layouts/newsletter.html.twig
@@ -9,7 +9,7 @@
                 <div class="form-group"><div class="response"></div></div>
                 <div class="form-group">
                     <input type="email" name="email" class="email" value="" placeholder="Votre e-mail" required>
-                    <button type="button" id="subscribe-newslatters" class="theme-btn btn-style-one">S'inscrire</button>
+                    <a href="{{ path('newsletter') }}" id="subscribe-newslatters" class="theme-btn btn-style-one">S'inscrire</a>
                 </div>
             </form>
         </div>
